RP-1078 Standardise on use of 'baseResourcePath' instead of individual identifying elements